<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".ui.settings.SettingsActivity">

    <TextView
        android:id="@+id/tv_languange_settings"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/settings_language"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch_reminder_settings"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:fontFamily="sans-serif"
        android:text="@string/settings_reminder"
        android:textColor="@android:color/black"
        android:textOff="@string/settings_on"
        android:textOn="@string/settings_off"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_languange_settings"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

</androidx.constraintlayout.widget.ConstraintLayout>