<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".ui.detail.UserDetailActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_detail_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:src="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_detail_avatar"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/detail_fullname"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/iv_detail_avatar"
        app:layout_constraintTop_toTopOf="@+id/iv_detail_avatar" />

    <TextView
        android:id="@+id/tv_detail_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/detail_company"
        android:textSize="13sp"
        app:drawableStartCompat="@drawable/ic_baseline_work_24"
        app:layout_constraintStart_toEndOf="@+id/iv_detail_avatar"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name" />

    <TextView
        android:id="@+id/tv_detail_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/detail_location"
        android:textSize="13sp"
        app:drawableStartCompat="@drawable/ic_baseline_location_on_24"
        app:layout_constraintStart_toEndOf="@+id/iv_detail_avatar"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_company" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_detail_avatar">

        <TextView
            android:id="@+id/tv_detail_followers"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/followers"
            android:textSize="13sp"
            app:drawableStartCompat="@drawable/ic_baseline_people_outline_24" />

        <TextView
            android:id="@+id/tv_detail_following"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/following"
            android:textSize="13sp"
            app:drawableStartCompat="@drawable/ic_baseline_circle_24" />

        <TextView
            android:id="@+id/tv_detail_repository"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/repository"
            android:textSize="13sp"
            app:drawableStartCompat="@drawable/ic_baseline_menu_book_24" />

    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_detail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_detail" />

    <ToggleButton
        android:id="@+id/tog_favorite"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/favorite_floating_button"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:textOff=""
        android:textOn=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>